* update payment logic * refactoring
Signed-off-by: Thiago Oliveira <thiago@thiagoti.com>